@@ -1522,26 +1522,30 @@ public class SourceFactory extends BaseFactory {
             SimpleType sType = attr.getSimpleType();
 
             // look for simpleType def in base type(s)
+            XMLType baseXMLType = complexType.getBaseType(); 
             while (sType == null) {
-                // If no simple type found: Get the same attribute of the base  type.
+                // If no simple type found: Get the same attribute of the base type.
                 // If base type is not complex, forget it; break out of loop now.
-                final XMLType xmlType = complexType.getBaseType();
-                if (xmlType == null || !(xmlType instanceof ComplexType)) {
+                if (baseXMLType == null || !(baseXMLType instanceof ComplexType)) {
                     break;
                 }
 
-                // Get the attribute with the same name as this attribute
-                // (=attr) from the base complextype.
-                final ComplexType cType = (ComplexType) xmlType;
-                AttributeDecl baseAttr = cType.getAttributeDecl(attr.getName());
-
-                // See if this one has a simple-type...
-                sType = baseAttr.getSimpleType();
-                if (sType != null) {
-                    attr.setSimpleType(sType);
-                }
+                // There's a base complexType; get the attribute with the same name 
+                // as this attribute (=attr) from it
+                final ComplexType baseComplexType = (ComplexType) baseXMLType;
+                AttributeDecl baseAttribute = baseComplexType.getAttributeDecl(attr.getName());
+                
+                if (baseAttribute != null) {
+                    // See if this one has a simple-type...
+                    sType = baseAttribute.getSimpleType();
+                    if (sType != null) {
+                        attr.setSimpleType(sType);
+                        break;
+                    }
+                } 
 
                 // ... if not, go another step higher in the class hierarchy
+                baseXMLType = baseXMLType.getBaseType();
             }
 
             // Look for referenced type (if any) for setting type, and use
